src/tests/fixtures/type_definitions/RenamedTypeWithoutClassName.invalid.ts.expected
-----------------
INPUT
----------------- 
/**
 * @GQLType Query
 */
export default class {
  /** @GQLField */
  hello(): string {
    return "Hello world!";
  }
}

-----------------
OUTPUT
-----------------
Error: Unexpected `@GQLType` annotation on unnamed class declaration.:
 --> src/tests/fixtures/type_definitions/RenamedTypeWithoutClassName.invalid.ts:4:1

  |  */
4 | export default class {
  | ^ 
  |   /** @GQLField */
  |   hello(): string {
  |     return "Hello world!";
  |   }
  | }
  | 
