src/tests/fixtures/type_definitions/RenamedTypeWithoutClassName.invalid.ts
/**
 * @GQLType Query
 */
export default class {
  /** @GQLField */
  hello(): string {
    return "Hello world!";
  }
}
